--- a/css/sample.css
+++ b/css/sample.css
@@ -2,11 +2,44 @@ body{
     margin:0;
     padding:0;
     text-align:left;
-    font-size: 32px;
+    font-size: 25px;
     background :url(../img/背景４.jpg);
     background-size: 100%;
-    height: 130px;
     font-family: fantasy;
+}
+
+.SCORE{
+  display: flex;
+  justify-content: flex-end;
+  /* align-items: center; */
+  text-align: left;
+  height: 40px;
+  color: white;
+  margin-right: 150px;
+  
+}
+
+.tokuten{
+  margin-right: 80px;
+  display: flex;
+  justify-content: flex-end; */
+  /* align-items: center; */
+  margin-top: 0px;
+  color: white;  
+}
+
+#h2{
+  display: flex;
+    font-size: 30px;
+    font-family: fantasy;
+    height: 40px;
+}
+
+.h3{
+  display: flex;
+    font-size: 25px;
+    font-family: fantasy;
+    height: 40px;
 }
 
 .stage {
@@ -57,18 +90,21 @@ body{
 }
 
 .mainbody{
-
+font-size: 30px;
 }
 
 
 h1.header{
+   font-size: 50px;
     font-family: serif;
     color: white
 }
 
 header{
+  font-size: 35px;
     font-family: fantasy;
     text-align: center;
+    height: 100px;
 }
 
 
@@ -161,7 +197,7 @@ li:hover{
 #con_hand{
     font-family: serif;
     color: white;
-    font-size: 70px;
+    font-size: 60px;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -170,8 +206,34 @@ li:hover{
 #judgment{
     font-family: serif;
     color: white;
-    font-size: 70px;
+    font-size: 60px;
     text-align: center;
     justify-content: center;
     align-items: center;
+}
+
+.savebtn{
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 150px;
+  margin-bottom: 50px;
+}
+
+#save
+{
+  color: #fff;
+  background-color: #3ebae0;
+width: 100px;
+height: 50px;
+font-size: 30px;
+
+}
+#save:hover,
+#save:hover {
+  color: #fff;
+  background: #3ebae0;
+}
+
+#save--radius {
+   border-radius: 100vh;
 }
