--- a/css/start.css
+++ b/css/start.css
@@ -1,18 +1,20 @@
-body{
-margin:0;
-    padding:0;
+.header{
+font-family: 'Times New Roman', Times, serif;
+color: #fff;
+    
+}
+
+body {
+font-family: 'Times New Roman', Times, serif;
+display: flex;
+height: 100vh;
+padding:0;
     text-align:left;
     font-size: 32px;
     background :url(../img/start_back.jpg);
     background-size: 100%;
     height: 130px;
     font-family: fantasy;
-}
-
-body {
-display: flex;
-height: 100vh;
-
 align-items: center;
 justify-content: center;
 }
@@ -101,7 +103,7 @@ body {
   bottom: 0;
   text-align: center;
   line-height: 120px;
-  font-family: sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   color: #ffffff;
   font-size: 16px;
 }
